# libtorch-rust

./: ASSESSMENT_REPORT.md  Cargo.toml  IMPLEMENTATION_STATUS.md  PERFORMANCE_ANALYSIS.md  PR_WEBGPU_BROWSER_DEMO.md  README.md
docs/: 20251109-0839-performance-optimisation.md  20251109-0845-webgpu-strategy.md  20251109-GPU_IMPLEMENTATION.md  plan.md
examples/: gpu_demo.rs  simple_nn.rs  tensor_operations.rs
examples/web-gpu-demo/: .gitignore  README.md  build.ts  dev-server.ts  index.html  package.json  tsconfig.json
examples/web-gpu-demo/public/data/mnist/: README.md
examples/web-gpu-demo/public/models/: README.md
examples/web-gpu-demo/scripts/: build-wasm.sh  download-mnist-dataset.ts  download-model.ts  process-mnist.ts  train_mnist.py
examples/web-gpu-demo/src/: App.tsx
examples/web-gpu-demo/src/components/: DrawingCanvas.tsx  MNISTDemo.tsx  TrainingDemo.tsx
examples/web-gpu-demo/src/webgpu/: device.ts  mnist.ts  operations.ts  shaders.ts
libtorch-rust/: Cargo.toml
libtorch-rust-sys/: Cargo.toml
libtorch-rust-sys/src/: device.rs  dtype.rs  error.rs  lib.rs  scalar.rs  storage.rs  tensor.rs
libtorch-rust-sys/src/autograd/: backward.rs  context.rs  edge.rs  mod.rs  node.rs  ops.rs
libtorch-rust-sys/src/gpu/: buffer.rs  device.rs  mod.rs  shaders.rs  tensor.rs
libtorch-rust/benches/: nn_benchmarks.rs  tensor_benchmarks.rs
libtorch-rust/src/: device.rs  index.rs  jit.rs  kind.rs  lib.rs  tensor.rs  wrappers.rs
libtorch-rust/src/nn/: init.rs  linear.rs  mod.rs  module.rs  optimizer.rs  sequential.rs  var_store.rs
libtorch-rust/src/vision/: dataset.rs  imagenet.rs  mod.rs
libtorch-rust/tests/: autograd_tests.rs  nn_tests.rs  tensor_tests.rs
libtorch-wasm-trainer/: Cargo.toml  README.md  ROADMAP.md
libtorch-wasm-trainer/.cargo/: config.toml
libtorch-wasm-trainer/examples/: verify_training.rs
libtorch-wasm-trainer/src/: lib.rs  model.rs  trainer.rs
