[workspace]
members = [
    "libtorch-rust",
    "libtorch-rust-sys", "libtorch-wasm-trainer",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["LibTorch Rust Contributors"]
repository = "https://github.com/boxabirds/libtorch-rust"

[workspace.dependencies]
# Core dependencies
half = "2.4"
libc = "0.2"
lazy_static = "1.4"
once_cell = "1.19"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.4"

# Image processing for vision module
image = "0.25"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# WebGPU support
wgpu = "27.0"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
futures = "0.3"

# Development dependencies
approx = "0.5"
criterion = "0.5"
proptest = "1.4"
